css/base.css
body {
	background-image: url("../images/background.jpg");
	background-size: cover;
	background-attachment: fixed;
	font-family: "Roboto";
}

/* Begin header formatting */

.header {
	background-color: #000000;
	height: 50px;
	position: fixed;
	width: 105%;
	margin-top: -10px;
	margin-left: -10px;
	margin-right: -10px;
	opacity: 0.85;
	z-index: 20;
}

.header a {
	text-decoration: none;
	outline: 0;
}

.header div {
	display: inline-block;
	color: white;
	height: 35px;
	padding-top: 15px;
	padding-left: 10px;
	padding-right: 25px;
	margin: 0px;
	margin-right: -5px;
	
}

.header h1 {
	margin-top: 0px;
	font-family: "Rokkitt";
	font-size: 25px;
}

.header .button:hover {
	color: #AD96FF;
}

.header .name {
	font-weight: bold;
	font-size: 30px;
	padding-right: 60px;
}

.toggle {
	margin-left: auto;
	margin-right: -1px;
	width: 50px;
	margin: 0px;
	padding-left: 70px;
	position: absolute;
	top: 0;
	right: 0;
	border: 0;
	background-image: url("../images/triangle.png");
	background-repeat: no-repeat;
}

.toggle .menu {
	position: absolute;
	top: 50;
	right: 0;
	width: 140px;
	height: auto;
	margin: 0px;
	display: none;
	z-index: 2;
}

.toggle:hover {
	background-image: url("../images/triangle-hover.png");
}

.toggle .menu .item {
	display: block;
	text-align: right;
	margin-top: -15px;
	margin-bottom: 10px;
	color: white;
	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;  
}

.toggle .menu .item:hover {
	color: #AD96FF;
}

.toggle img {
	position: absolute;
	top: 0;
	right: 35;
	border: 0;
}

.toggle img:hover {
	background-color: #2F155C;
}

@media (min-width: 801px) {
	.header .toggle {
		display: none;
	}
}

@media (max-width: 800px) {
	.header .button {
		display: none;
	}
}
	
/* End header formatting */

.content {
	background-image: url("../images/content_background.png");
	position: absolute;
	width: 100%;
	top: 0px;
	bottom: 0px;
	min-height: 100%;
	margin-left: -8px;
	margin-top: -2px;
	margin-bottom: 0px;
	display: none;
	z-index: 1;
}

.content div{
	display: none;
	height: auto;
	color: white;
}

.content div table {
	color: white;
	font-size: 20px;
	width: 65%;
	padding-left: 5%;
	padding-top: 0px;
}

.content div a {
	text-decoration: none;
	border: 0;
	color: white;
	padding-left: 0px;
}

.content div a:hover {
	color: #AD96FF !important;
}

.content .topspacer {
	height: 20px;
	width: 100%;
	display: block;
}

.content .toptext {
	font-size: 20px;
	padding-left: 15%;
	width: 70%;
}

.content .picturelist {
	display: inline-block;
	width: 100%;
}

.content tr {
	padding-left: 5%;
}

.content .picturelist .text {
	width: 55%;
	padding-right: 5%;
	padding-bottom: 40px;
}

.content .picturelist .image {
	margin-left: auto;
	margin-right: auto;
	width: 35%;
	padding-bottom: 40px;
	text-align: center;
}

.intextlink {
	color: #D5C9FF !important;
}

#contact table {
	padding-left: 20%;
}

#contact td {
	padding-top: 30px;
	padding-right: 30px;
}

